<resources>
    <string name="app_name">MTAAClient</string>
    <string name="user_name_and_surname">%s %s</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="send">SEND</string>
    <string name="choose_date">Choose date</string>
    <string name="do_not_have_account_click_to_register">Do not have account? Click to register.</string>
</resources>
