<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registrationEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/registrationUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/user_name"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/registrationFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/first_name"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/registrationLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/last_name"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/registrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonClicked"
            android:text="@string/send" />
    </LinearLayout>

</RelativeLayout>